--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Nov 21 23:51:19 +0100 2008 Jim Meyering <meyering@redhat.com>
+
+	* gnulib/tests/test-EOVERFLOW: Remove.
+	* gnulib/tests/.cvsignore: Add test-EOVERFLOW, then...
+	Run "make sync-vcs-ignore-files" to Update .gitignore files.
+
 Fri Nov 21 12:54:14 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* docs/*.html: Re-generate website docs for sitemap change
