--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Mon Nov 24 08:10:49 +0100 2008 Jim Meyering <meyering@redhat.com>
 
+	tests: virsh-all: new script
+	* tests/virsh-all: New script.
+	* tests/Makefile.am (test_scripts): Add virsh-all.
+
 	Move the expected output data from virshdata/*.txt into virshtest.c.
 	* tests/virshtest.c: Embed literal, expected output here, rather than
 	using virshdata/*.txt file names.
