tests: new test: virsh-synopsis
* tests/virsh-synopsis: new file
* tests/Makefile.am (test_scripts): Add virsh-synopsis.
* src/virsh.c: Correct help SYNOPSIS for each of seven commands.

When I first ran this script, "make check" failed like this:
  ...
  invalid help SYNOPSIS for net-create:
      create a network from an XML <file>
  invalid help SYNOPSIS for net-define:
      define a network from an XML <file>
  invalid help SYNOPSIS for net-start:
      start <network>
  invalid help SYNOPSIS for pool-create:
      create a pool from an XML <file>
  invalid help SYNOPSIS for pool-define:
      define a pool from an XML <file>
  invalid help SYNOPSIS for pool-start:
      start <pool>
  invalid help SYNOPSIS for vol-create:
      create <file>
  FAIL: virsh-synopsis

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 Mon Nov 24 08:10:49 +0100 2008 Jim Meyering <meyering@redhat.com>
 
+	tests: new test: virsh-synopsis
+	* tests/virsh-synopsis: new file
+	* tests/Makefile.am (test_scripts): Add virsh-synopsis.
+	* src/virsh.c: Correct help SYNOPSIS for each of seven commands.
+
 	tests: virsh-all: new script
 	* tests/virsh-all: New script.
 	* tests/Makefile.am (test_scripts): Add virsh-all.
