--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Mon Nov 24 19:22:40 GMT 2008 Dnaiel P. Berrange <berrange@redhat.com>
+
+	* tests/Makefile.am, tests/sexpr2xmltest.c,
+	tests/testutilsxen.c, tests/xencapstest.c,
+	tests/xmconfigtest.c, tests/xml2sexprtest.c: Disable all
+	Xen tests when Xen driver build is disabled. Remove unneccessary
+	WITH_XEN conditionals from source, since the entire build
+	is disabled in Makefile.am
+
 Mon Nov 24 16:49:40 GMT 2008 Dnaiel P. Berrange <berrange@redhat.com>
 
 	* autobuild.sh: Disable UML driver on mingw32 biuld
