--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Mon Nov 24 19:27:40 GMT 2008 Dnaiel P. Berrange <berrange@redhat.com>
+
+	* examples/domain-events/events-python/event-test.py,
+	python/libvir.c, python/libvir.py, python/libvirt_wrap.h,
+	python/types.c, python/virConnect.py: Fixes to python
+	bindings for changes in public event API (David Lively)
+
 Mon Nov 24 19:22:40 GMT 2008 Dnaiel P. Berrange <berrange@redhat.com>
 
 	* tests/Makefile.am, tests/sexpr2xmltest.c,
