--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
-Tue Nov 25 11:29:18 +0100 2008 Jim Meyering <meyering@redhat.com>
+Tue Nov 25 11:29:19 +0100 2008 Jim Meyering <meyering@redhat.com>
+
+	* src/virterror.c (virReportErrorHelper): Sync doc to code.
 
 	libvirt.c: document the virState* functions
 	* src/libvirt.c (virStateActive, virStateCleanup, virStateReload):
