--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Nov 25 11:17:40 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/xm_internal.c: Add missing _(...) calls to diagnostics
+
 Tue Nov 25 10:49:40 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/Makefile.am: Remove unneccessary $(builddir) usage which
