--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Nov 25 11:27:40 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* mingw32-libvirt.spec.in: Disable UML driver for mingw build
+
 Tue Nov 25 11:17:40 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/xm_internal.c: Add missing _(...) calls to diagnostics
