--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Tue Nov 25 16:29:09 CET 2008 Daniel Veillard <veillard@redhat.com>
+
+	* configure.in docs/* NEWS: release of 0.5.0
+	* po/*: updated from the translators and merged
+	* docs/apibuild.py src/libvirt.c: avoid some warnings at doc
+	  generation time
+
 Tue Nov 25 16:34:10 +0100 2008 Jim Meyering <meyering@redhat.com>
 
 	* configure.in: avoid the following diagnostic when running ../configure
