Currently libvirt can race with udev creation of /dev/disk/by-{id,path}, so if we fail to open the directory, retry up to 5 seconds.  This is only likely to happen on hosts that are:
1) diskless (so /dev/disk/by-{id,path} doesn't exist already), and
2) slow, and/or heavily loaded (meaning that udev can take some time to create
the /dev nodes).

Signed-off-by: Chris Lalancette <clalance@redhat.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Nov 28 08:40:00 CET 2008 Chris Lalancette <clalance@redhat.com>
+	* src/storage_backend.c: Wait up to 5 seconds for
+	/dev/disk/by-{id,path} to exist in virStorageBackendStablePath
+
 Thu Nov 27 17:15:10 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/xen_unified.c: use preferably xend method to update
