--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Fri Nov 28 11:17:40 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* libvirt.spec.in: Add missing numa-ctl BuildRequires
+	* qemud/Makefile.am: Fix libvirtd_DEPENDANCIES to include all libs
+	* src/qemu_conf.c, src/qemu_driver.c, src/uml_conf.c,
+	src/uml_driver.c: Define NUMA_VERSION1_COMPATIBILITY and
+	fix size of array used to get node mapping
+
 Fri Nov 28 08:40:00 CET 2008 Chris Lalancette <clalance@redhat.com>
 	* src/storage_backend.c: Wait up to 5 seconds for
 	/dev/disk/by-{id,path} to exist in virStorageBackendStablePath
