--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Fri Nov 28 11:21:40 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	Fix XM driver disk parsing with no source CDROMs
+	* src/domain_conf.c: Translate "" into NULL for disk source
+	path to deal with broken apps
+	* src/xm_internal.c: Fix disk source parsing to work with
+	no-source disk definitions (eg CDROM without media)
+	* tests/xmconfigdata/test-no-source-cdrom.cfg,
+	tests/xmconfigdata/test-no-source-cdrom.xml,
+	tests/xmconfigtest.c: Add test case for no-src CDROM
+
 Fri Nov 28 11:17:40 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* libvirt.spec.in: Add missing numa-ctl BuildRequires
