Fix driver ordering to make domain autostart work (Gerd von Egidy)

--- a/AUTHORS
+++ b/AUTHORS
@@ -55,7 +55,7 @@ Patches have also been contributed by:
   Chris Wrigh          <chrisw@redhat.com>
   Ben Guthro           <bguthro@virtualiron.com>
   Shigeki Sakamoto     <fj0588di@aa.jp.fujitsu.com>
-
+  Gerd von Egidy       <lists@egidy.de>
 
   [....send patches to get your name here....]
 
