also look for /usb/bin/kvm

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu, 4 Dec 2008 11:41:12 CET Guido Günther <agx@sigxcpu.org>
+
+	* src/qemu_driver.c: also look for /usr/bin/kvm
+
 Tue, 2 Dec 2008 16:58:16 +0100 Jim Meyering <meyering@redhat.com>
 
 	fix inadequate initialization in storage and test drivers
