--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Dec  4 09:42:00 EST 2008 Cole Robinson <crobinso@redhat.com>
+
+	* src/qemu_driver.c: Increase timeout for initial monitor poll
+
 Thu Dec  4 15:36:42 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/bridge.c: patch setting MTU on tap interface to be the same
