--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Dec  4 09:45:00 EST 2008 Cole Robinson <crobinso@redhat.com>
+
+	* docs/formatstorage.html.in docs/storage.html.in : Fix some
+	documentation copy and paste errors.
+	* src/virsh.c : Fix a typo
+
 Thu Dec  4 09:42:00 EST 2008 Cole Robinson <crobinso@redhat.com>
 
 	* src/qemu_driver.c: Increase timeout for initial monitor poll
