--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Dec  4 16:20:20 CET 2008 Daniel Veillard <veillard@redhat.com>
+
+	* src/storage_conf.c: fix crash and regression when defining
+	  a storage volume without a format (Cole Robinson)
+
 Thu Dec  4 09:45:00 EST 2008 Cole Robinson <crobinso@redhat.com>
 
 	* docs/formatstorage.html.in docs/storage.html.in : Fix some
