--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Dec  4 16:51:41 CET 2008 Daniel Veillard <veillard@redhat.com>
+
+	* src/libvirt_sym.version.in configure.in NEWS docs/*: release
+	  of 0.5.1
+	* po/*: updated and regenerated
+
 Thu Dec  4 16:20:20 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/storage_conf.c: fix crash and regression when defining
