--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Dec  4 20:58:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/test.c: Add locking for thread safety
+	* tests/virsh-all: Set variables to allow direct invocation
+	of test
+
 Thu Dec  4 20:57:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/test.c: Merge all return paths from driver APIs
