--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Dec  4 21:00:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/test.c: Stub out node device APIs to avoid activating
+	the daemon
+
 Thu Dec  4 20:58:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/test.c: Add locking for thread safety
