--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Dec  4 21:05:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/qemu_conf.h: Add a driver lock variable
+	* src/qemu_driver.c: Add locking for thread safety
+
 Thu Dec  4 21:01:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/qemu_driver.c: Merge all return paths from driver APIs
