--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+Thu Dec  4 21:09:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	QEMU domain events thread safety
+	* src/domain_event.c, src/domain_event.h: Add convenient
+	methods for dispatching a list of events, and a single
+	event to a list of callbacks. Change signature of push
+	method to take a pre-allocated virDomainEventPtr object
+	* src/libvirt_sym.version.in: Export new event methods
+	to daemon code / drivers
+	* src/qemu_conf.h, src/qemu_driver.c: Make event dispatch
+	threadsafe by doing asynchronously
+	* src/remote_internal.c, src/xen_inotify.c, src/xen_unified.c,
+	src/xen_unified.h, src/xs_internal.c: Update for changes in
+	domain event APIs
+
 Thu Dec  4 21:05:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/qemu_conf.h: Add a driver lock variable
