--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Dec  4 21:11:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/lxc_conf.h: Add driver lock variable
+	* src/lxc_driver.c: Add locking for thread safety
+
 Thu Dec  4 21:10:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/lxc_driver.c: Merge all return paths from driver APIs
