--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Dec  4 21:14:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/uml_conf.h: Add driver lock variable
+	* src/uml_driver.c: Add locking for thread safety
+
 Thu Dec  4 21:13:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* Makefile.maint: Add umlError function
