--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Dec  4 21:38:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/network_driver.c: Add locking for thread safety
+
 Thu Dec  4 21:37:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/network_driver.c: Merge all return paths from driver APIs
