--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Dec  4 21:40:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/storage_conf.h: Add driver lock
+	* src/storage_driver.c: Add locking for thread safety
+
 Thu Dec  4 21:39:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/storage_driver.c: Merge all return paths driver storage
