--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Thu Dec  4 21:48:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/libvirt_sym.version.in, src/node_device.c,
+	src/node_device.h, src/node_device_conf.h,
+	src/node_device_devkit.c, src/node_device_hal.c: Add
+	locking for thread safety of driver APIs
+
 Thu Dec  4 21:46:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/libvirt.c, src/datatypes.h, src/datatypes.c: Cache
