--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Thu Dec  4 22:01:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* qemud/remote.c: Change from a giant switch() on RPC number
+	into a simple array lookup of RPC handler function
+	* qemud/Makefile.am, qemud/remote_generate_stubs.pl: Change
+	generator to produce a union of data types for O(1) dispatch
+	* qemud/remote_dispatch_*: Re-generate files
+
 Thu Dec  4 21:49:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	Per object locking implementation
