--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Dec  4 22:09:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* qemud/qemud.h, qemud/qemud.c: Change client linked list into
+	an array for easier thread safety
+
 Thu Dec  4 22:01:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* qemud/remote.c: Change from a giant switch() on RPC number
