--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Thu Dec  4 22:14:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/event.c, src/event.h: Make all event handling thread
+	safe and re-entrant safe, and allow poll() to be woken up
+	by other threads.
+	* src/qemud.c, src/qemud.h: Initialize event loop explicitly
+
 Thu Dec  4 22:12:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* qemud/qemud.c, qemud/qemud.h, qemud/remote.c: Make all
