--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+Thu Dec  4 22:16:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	Make daemon use a thread pool for handling RPC calls
+	from multiple clients.
+	* qemud/THREADING.txt: Describe threading rules
+	* qemud/qemud.h, qemud/qemud.c, src/remote.c: Add a pool
+	of threads for handling RPC call processing. Use main
+	thread only for event loop
+	* qemud/remote_generate_stubs.pl: Pass virConnectPtr object
+	into dispatch stubs to avoid need to access client struct
+	* qemud/remote_dispatch_prototypes.h: Re-generated
+
 Thu Dec  4 22:14:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/event.c, src/event.h: Make all event handling thread
