--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Thu Dec  4 22:18:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* qemud/qemud.c: Read number of threads for RPC dispatch
+	from config. Allow a limit on total client connection
+	count.
+	* qemud/libvirtd.conf: Add max_clients and max_workers
+	and min_workers config vars
+	* qemud/libvirtd.aug, qemud/test_libvirtd.aug: Augeas
+	support for new config params
+
 Thu Dec  4 22:16:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	Make daemon use a thread pool for handling RPC calls
