--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Dec  5 10:10:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/domain_conf.c: Disable a few more functions for proxy
+	build which should not be used
+
 Thu Dec  4 22:20:41 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/qemu_driver.c: Remove unused driver argument from
