--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Dec  7 14:03:53 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/test.c: Fix return value in testStoragePoolBuild
+
 Fri Dec  5 16:03:53 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/node_device_hal.c configure.in: fix a compilation problem
