--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Dec  8 11:28:53 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/storage_conf.c: Workaround missing ULLONG_MAX in
+	Debian etch's limits.h
+
 Mon Dec  8 11:17:53 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/qemu_driver.c, src/uml_driver.c: Fix guest autostart
