--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Mon Dec  8 13:22:06 +0100 2008 Jim Meyering <meyering@redhat.com>
 
+	virsh.c: tweak options to produce more accurate help
+	* src/virsh.c: Adjust some vshCmdOptDef command option flags
+	to improve auto-generated help command syntax.
+
 	virsh.c: remove all "syntax" vshCmdInfo entries.
 	* src/virsh.c: ... now that info is generated.
 
