--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Tue 9 Dez 2008 21:08:43 CET Guido Günther <agx@sigxcpu.org>
+
+	logrotate qemu monitor logs
+	* src/qemu_driver.c: open logfile O_APPEND instead of O_TRUNC when
+	running as root
+	* qemud/Makefile.am: install logrotate configuration (by Harald Sraub)
+	and create logdir
+
 Mon Dec  8 13:22:06 +0100 2008 Jim Meyering <meyering@redhat.com>
 
 	virsh.c: tweak options to produce more accurate help
