--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Wed Dec 10 20:18:36 +0100 2008 Jim Meyering <meyering@redhat.com>
+
+	avoid a new "make distcheck" failure
+	Distribute the new file, libvirtd.logrotate.in, and make
+	distclean remove the build product, libvirtd.logrotate.
+	* qemud/Makefile.am (EXTRA_DIST): Add libvirtd.logrotate.in.
+	(DISTCLEANFILES): Initialize, and append libvirtd.logrotate.in.
+
 Wed Dec 10 17:33:49 +0100 2008 Jim Meyering <meyering@redhat.com>
 
 	avoid format string warnings
