--- a/AUTHORS
+++ b/AUTHORS
@@ -56,6 +56,7 @@ Patches have also been contributed by:
   Ben Guthro           <bguthro@virtualiron.com>
   Shigeki Sakamoto     <fj0588di@aa.jp.fujitsu.com>
   Gerd von Egidy       <lists@egidy.de>
+  Itamar Heim          <iheim@redhat.com>
 
   [....send patches to get your name here....]
 
