--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Thu Dec 11 12:39:20 CET 2008 Daniel Veillard <veillard@redhat.com>
+
+	* src/domain_conf.c src/domain_conf.h src/qemu_conf.c
+	  tests/qemuxml2argvtest.c tests/qemuxml2xmltest.c
+	  tests/qemuxml2argvdata/qemuxml2argv-graphics-sdl-fullscreen.args
+	  tests/qemuxml2argvdata/qemuxml2argv-graphics-sdl-fullscreen.xml:
+	  slightly modified patch for SDL fullscreen from Itamar Heim
+	* docs/formatdomain.html docs/formatdomain.html.in docs/libvirt.rng:
+	  update the schemas and docs about the sdl graphic element attributes
+	* AUTHORS: add Itamar Heim
+
 Wed Dec 10 20:18:36 +0100 2008 Jim Meyering <meyering@redhat.com>
 
 	avoid a new "make distcheck" failure
