--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Dec 11 09:55:23 EST 2008 Cole Robinson <crobinso@redhat.com>
+
+	* src/netork_driver.c src/qemu_conf.c: Fix segfault if virtual
+	network does not have a bridge name.
+
 Thu Dec 11 12:39:20 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/domain_conf.c src/domain_conf.h src/qemu_conf.c
