--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Dec 11 10:03:00 EST 2008 Cole Robinson <crobinso@redhat.com>
+
+	* src/test.c: Fix locking issue in test driver VolLookupByPath
+
 Thu Dec 11 10:00:54 EST 2008 Cole Robinson <crobinso@redhat.com>
 
 	* libvirt.spec.in: Fix rpm build by installing logrotate config
