add --version support to libvirtd * qemud/qemud.c: add --version support to libvirtd, patch by   Dave Allan * AUTHORS: add Dave Allan Daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -57,6 +57,7 @@ Patches have also been contributed by:
   Shigeki Sakamoto     <fj0588di@aa.jp.fujitsu.com>
   Gerd von Egidy       <lists@egidy.de>
   Itamar Heim          <iheim@redhat.com>
+  Dave Allan           <dallan@redhat.com>
 
   [....send patches to get your name here....]
 
