--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Dec 12 08:54:40 CET 2008 Daniel Veillard <veillard@redhat.com>
+
+	* qemud/qemud.c: add --version support to libvirtd, patch by
+	  Dave Allan
+	* AUTHORS: add Dave Allan
+
 Fri Dec 12 08:34:47 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* libvirt.spec.in: fix a conditional bug in spec file #460510,
