--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+Fri Dec 12 12:19:56 +0100 2008 Jim Meyering <meyering@redhat.com>
+
+	remove unused xmlrpc-related files
+	* src/xmlrpc.h: Remove file.
+	* src/xmlrpc.c: Likewise.
+	* tests/test_xmlrpc.sh: Likewise.
+	* tests/xmlrpctest.c: Likewise.
+	* tests/xmlrpcserver.py: Likewise.
+	* tests/Makefile.am (EXTRA_DIST): Remove xmlserver.py.
+	(noinst_PROGRAMS): Remove xmlrpctest, along with associated variables.
+	* po/POTFILES.in: Remove src/xmlrpc.c.
+	* tests/.cvsignore: Remove xmlrpctest.
+
 Fri Dec 12 11:37:16 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/qemu_conf.c src/uml_conf.c: fix a couple of places where
