--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Dec 12 17:08:08 +0100 2008 Jim Meyering <meyering@redhat.com>
+
+	avoid a spurious test failure on non-numa systems
+	* tests/daemon-conf: Ignore a spurious libnuma warning.
+	Reported by Daniel Veillard.
+
 Fri Dec 12 14:57:17 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* Makefile.maint: fix tabs in C source error message based on
